# ProjetSteganographie

./: .gitignore  CMakeLists.txt  benchmark.sh  decrypt.sh  main.cpp  performance_results.csv  plot_performance.py  run.sh  run_plot.sh
utils/: decode_cpu.cpp  decode_cpu.hpp  encode_cpu.cpp  encode_cpu.hpp  encode_naive.cu  encode_naive.hpp  find_sentinels_naive.cu  find_sentinels_naive.hpp  naive_decrypt.cu  naive_decrypt.hpp
